php_bs_grid
===========

php datagrid with jquery, bootstrap frontend

Copyright Christos Pontikis http://www.pontikis.net

Project page https://github.com/pontikis/php_bs_grid

License MIT https://raw.github.com/pontikis/php_bs_grid/master/MIT_LICENSE


Release 0.9.4 (?? May 2017)
--------------------------

* Added sort_simple_default_order column property #12


Release 0.9.3 (15 May 2017)
--------------------------

* trim filter values #10
* filter min chars (after trim) #9
* fix typo (th_class instead of td_class) in displayTableData #8


Release 0.9.2 (14 Apr 2017)
--------------------------

* bug fixed - Ajax error on press Enter (13) #7
* Rows per page always visible (top row) #6


Release 0.9.1 (13 Apr 2017)
--------------------------

* bugs using [is_null] operators (fixed) #5
* minified js version added


Release 0.9.0 (10 Apr 2017)
--------------------------

* Excel export added (CSV export removed) #4

Release 0.8.0 (9 Apr 2017)
--------------------------

Basic functionality #1

* Customizable columns
* Pagination
* Simple column sorting
* Advanced sorting
* Filters (text, lookup, date)
* Export (CSV)
* Multilanguage
* Support prepared statements
* Responsive design


Release 0.1.0 (3 Apr 2017)
-------------------------

* just started