@@ -13,6 +13,7 @@ License MIT https://raw.github.com/pontikis/php_bs_grid/master/MIT_LICENSE
 Release 0.9.4 (?? May 2017)
 --------------------------
 
+* Fixed WHERE statements (beyond filters applied by the user interface) #13
 * Added sort_simple_default_order column property #12
 
 
